<resources>
    <string name="app_name">E Reading Android</string>
    <string name="activity_animation_duration">250</string>

    <!--Api Error-->
    <string name="api_dialog_error_tv_title">Lỗi truy cập dữ liệu từ Server.\nVui long kiểm tra kết nối mạng và thử lại.</string>
    <string name="api_dialog_error_tv_ok">OK</string>

    <!--Pager new Feed-->
    <string name="page_new_feed_header_title">Tin tức</string>
    <string name="list_new_feed_header_title">Cnn News</string>
    <string name="translate_new_feed_error">Lỗi không thể lấy thông tin bài báo. Kiểm tra kết nối mạng!</string>
    <string name="translate_new_feed_toast_select_word">Từ %s đã được chọn từ trước.</string>


    <!--Pager Home-->
    <string name="page_home_header_title">Trang chủ</string>

    <!--Pager Account-->
    <string name="page_account_header_title">Tài khoản</string>
    <string name="page_account_login_info_default">Đăng nhập</string>
    <string name="toast_requirement_login">Trước tiên bạn hãy đăng nhập.</string>
    <string name="page_account_tv_level_english">Trình độ tiếng anh</string>
    <string name="page_account_tv_favorite">Từ vựng yêu thích</string>
    <string name="page_account_tv_history">Lịch sử bài báo</string>
    <string name="page_account_tv_feedback">Góp ý</string>
    <string name="page_account_tv_logout">Đăng xuất</string>

    <!--Dialog Feedback-->
    <string name="dialog_feedback_title">Góp ý</string>
    <string name="dialog_feedback_message_text_hint">Bạn chưa hài lòng, hãy giúp chúng tôi cải thiện ứng dụng này hơn!</string>
    <string name="dialog_feedback_contact_text_hint">Số điên thoại, gmail hoặc facebook để chúng tôi có thể liên lac với bạn.</string>
    <string name="dialog_feedback_btn_send">Gửi</string>


</resources>
