<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_feedback_layout"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_feedback_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_feedback_title"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_feedback_message"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_box"
        android:gravity="top|start"
        android:hint="@string/dialog_feedback_message_text_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback_title" />

    <EditText
        android:id="@+id/edt_feedback_contact"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_text_box"
        android:gravity="top|start"
        android:hint="@string/dialog_feedback_contact_text_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_feedback_message" />

    <Button
        android:id="@+id/btn_feedback_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_main_app"
        android:text="@string/dialog_feedback_btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_feedback_contact" />
</android.support.constraint.ConstraintLayout>
