<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/layout_manager_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_logo_not_text_main_app" />

        <TextView
            android:id="@+id/tv_page_account_manager_email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/page_account_login_info_default"
            android:textColor="@color/colorMainApp"
            android:textSize="25sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_manager_level_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_text_view_manager"
        android:drawableLeft="@drawable/ic_favorite_24"
        android:drawableRight="@drawable/ic_next_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/page_account_tv_level_english"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/layout_manager_logo_login" />

    <TextView
        android:id="@+id/tv_manager_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_text_view_manager"
        android:drawableLeft="@drawable/ic_favorite_24"
        android:drawableRight="@drawable/ic_next_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/page_account_tv_favorite"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_manager_level_english" />

    <TextView
        android:id="@+id/tv_manager_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_text_view_manager"
        android:drawableLeft="@drawable/ic_favorite_24"
        android:drawableRight="@drawable/ic_next_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/page_account_tv_history"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_manager_favorite" />

    <TextView
        android:id="@+id/tv_manager_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_text_view_manager"
        android:drawableLeft="@drawable/ic_favorite_24"
        android:drawableRight="@drawable/ic_next_24"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:text="@string/page_account_tv_logout"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_manager_history" />
</android.support.constraint.ConstraintLayout>
